# jarify

./: .doppler.yaml  .gitignore  AGENTS.md  CHANGELOG.md  README.md  cliff.toml  mise.toml  pyproject.toml
.agents/skills/: add-formatter-rule.md  test-integrity.md
.agents/skills/test-failure-diagnosis/: SKILL.md
.github/workflows/: ci.yml  prepare-release.yml  publish.yml
.mise/tasks/release/: prepare
docs/: rules.md  sql-style-guide.md
docs/editors/: README.md  neovim.md
scripts/: gen_rules_doc.py
src/jarify/: __init__.py  cli.py  comment_overrides.py  config.py  formatter.py  generator.py  linter.py  parser.py  sqlmesh.py  types.py
src/jarify/rules/: __init__.py  base.py  consistent_empty_array.py  cte_naming.py  duckdb_prefer_qualify.py  duckdb_type_style.py  keyword_case.py  no_implicit_cross_join.py  no_select_star.py  no_select_star_in_cte.py  no_unused_cte.py  prefer_group_by_all.py  prefer_if_over_case.py  prefer_ifnull_over_coalesce.py  prefer_neq_operator.py  prefer_using_over_on.py  trailing_commas.py
tests/: conftest.py  test_cli.py  test_comment_overrides.py  test_config.py  test_duckdb_rules.py  test_fixtures.py  test_formatter.py  test_lint_rules.py  test_parser.py  test_sqlmesh.py
tests/fixtures/comments/: disable_case_rewrite.expected.sql  disable_case_rewrite.input.sql
tests/fixtures/complex/: real_world.expected.sql  real_world.input.sql
tests/fixtures/conditionals/: if_wide_condition.expected.sql  if_wide_condition.input.sql  prefer_if_no_else.expected.sql  prefer_if_no_else.input.sql  prefer_if_over_case.expected.sql  prefer_if_over_case.input.sql
tests/fixtures/create_table/: basic.expected.sql  basic.input.sql  inline_primary_key.expected.sql  inline_primary_key.input.sql  simple_no_constraints.expected.sql  simple_no_constraints.input.sql
tests/fixtures/cte/: basic_cte.expected.sql  basic_cte.input.sql  cte_inline_comment.expected.sql  cte_inline_comment.input.sql  cte_leading_comment.expected.sql  cte_leading_comment.input.sql  in_subquery.expected.sql  in_subquery.input.sql
tests/fixtures/duckdb/: agg_window_uppercase.expected.sql  agg_window_uppercase.input.sql  create_macro.expected.sql  create_macro.input.sql  create_macro_table.expected.sql  create_macro_table.input.sql  distinct_in_aggregates.expected.sql  distinct_in_aggregates.input.sql  json_extract_cast_grouping.input.sql  (+30 more)
(+107 files in other folders)
